ok we have to rename test to something else l8er

--- a/www/index.html
+++ b/www/index.html
@@ -385,6 +385,14 @@
               </tbody>
             </table>
           </span>
+
+          <!-- Test tab -->
+          <span>
+            <div class="test-table-container">
+              <table class="test-table" margin-top="10px" margin-left="10px">
+              </table>
+            </div>
+          </span>
         </span>
       </div>
 
