--- a/www/index.html
+++ b/www/index.html
@@ -388,9 +388,14 @@
 
           <!-- Test tab -->
           <span>
-            <div class="test-table-container">
+            <div class="test-table-container"> <!-- TODO: rename this-->
               <table class="test-table" margin-top="10px" margin-left="10px">
               </table>
+            </div>
+            <form class="filters-container">
+                <label for="filter">look for number:</label>
+                <input type="text" name="lookfor">
+                <input type="submit" class="submit-filters"></button>
             </div>
           </span>
         </span>
