Added tab template in index.html and added tab controller

--- a/www/index.html
+++ b/www/index.html
@@ -385,6 +385,26 @@
               </tbody>
             </table>
           </span>
+
+          <!-- Mihir tab -->
+          <span>
+            <div class="mihir-table-container">
+              <table class="mihir-table" margin-top="10px" margin-left="10px">
+                <tr>
+                  <th>TimeStamp</th>
+                  <th>Data</th>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td></td>
+                </tr>
+              </table>
+            </div>
+          </span>
         </span>
       </div>
 
