Revert "table looks better"
This reverts commit 15f5388fc6bb61d5585f5e4f0bd721bfb07e04f7.

--- a/www/index.html
+++ b/www/index.html
@@ -386,16 +386,16 @@
             </table>
           </span>
 
-          <!-- search tab -->
+          <!-- Test tab -->
           <span>
-            <form class="filters-container">
-                <label for="filter">filter log message:</label>
-                <input type="text" name="lookfor">
-                <input type="submit" class="submit-filters"></button>
-            </form>
             <div class="test-table-container"> <!-- TODO: rename this-->
               <table class="test-table" margin-top="10px" margin-left="10px">
               </table>
+            </div>
+            <form class="filters-container">
+                <label for="filter">look for number:</label>
+                <input type="text" name="lookfor">
+                <input type="submit" class="submit-filters"></button>
             </div>
           </span>
         </span>
